--- a/Belleview/styles.css
+++ b/Belleview/styles.css
@@ -17,7 +17,7 @@ line-height: 1.6;
 
 color: #333;
 
-background-color: #fff;
+background-color: rgb(204, 229, 238);
 
 }
 
@@ -41,7 +41,8 @@ top: 0;
 
 z-index: 1000;
 
-background: rgba(255, 255, 255, 0.95);
+
+background: linear-gradient(rgb(123, 198, 245), rgb(201, 222, 224));
 
 backdrop-filter: blur(10px);
 
@@ -73,13 +74,12 @@ gap: 12px;
 
 }
 
+
 .logo-icon {
 
-width: 48px;
+width: 55px;
 
-height: 48px;
-
-background: #2563eb;
+height: 55px;
 
 border-radius: 50%;
 
@@ -99,7 +99,7 @@ font-size: 1.25rem;
 
 .logo-text h1 {
 
-font-size: 1.5rem;
+font-size: 1.6rem;
 
 font-weight: bold;
 
@@ -111,7 +111,7 @@ margin-bottom: 2px;
 
 .logo-text p {
 
-font-size: 0.875rem;
+font-size: 0.95rem;
 
 color: #6b7280;
 
@@ -128,6 +128,10 @@ gap: 8px;
 background: #dbeafe;
 
 padding: 8px 12px;
+
+margin-right: 20px;
+
+margin-left: 40px;
 
 border-radius: 8px;
 
@@ -245,19 +249,30 @@ color: #1d4ed8;
 
 .hero {
 
-background: linear-gradient(135deg, #2563eb, #1e40af);
+ 
+background-position: center;
+     
+ background-repeat: no-repeat;
+     
+     background-size: cover;
+
+     position: relative;
 
 color: white;
 
-padding: 5rem 0;
+padding: 8rem 0;
 
 text-align: center;
+
+  animation: changeBackground 30s infinite;
+
+  
 
 }
 
 .hero-title {
 
-font-size: 3rem;
+font-size: 3.5rem;
 
 font-weight: bold;
 
@@ -269,7 +284,7 @@ animation: fadeInUp 1s ease-out;
 
 .hero-subtitle {
 
-font-size: 1.25rem;
+font-size: 1.31rem;
 
 margin-bottom: 2rem;
 
@@ -325,9 +340,11 @@ display: inline-block;
 
 .btn-primary {
 
-background: white;
+border: 2px solid white;
 
-color: #2563eb;
+background: transparent;
+
+color: white;
 
 }
 
@@ -336,6 +353,8 @@ color: #2563eb;
 background: #f3f4f6;
 
 transform: translateY(-2px);
+
+color: #2563eb;
 
 }
 
@@ -357,6 +376,16 @@ color: #2563eb;
 
 transform: translateY(-2px);
 
+}
+
+.btn-tertiary{
+color: #e7e0e0;
+background-color: rgb(22, 98, 238);
+border: 2px solid #060ef6;
+}
+
+.btn-tertiary:hover{
+ transform: scale(1.2)   
 }
 
 /* Section Styles */
@@ -1128,6 +1157,19 @@ transform: translateX(-100%);
 }
 
 }
+
+
+@keyframes changeBackground {
+  0%, 25% { background-image: linear-gradient(rgba(12, 81, 87, 0.6), rgba(34, 89, 122, 0.6)), url("shine.jpg");}
+
+  26%, 50% { background-image: linear-gradient(rgba(12, 81, 87, 0.6), rgba(34, 89, 122, 0.6)), url("wallpaperflare.com_wallpaper\ \(1\).jpg"); }
+
+  51%, 75% { background-image: linear-gradient(rgba(12, 81, 87, 0.6), rgba(34, 89, 122, 0.6)), url("teeth.jpg"); }
+
+  76%, 100% { background-image: linear-gradient(rgba(12, 81, 87, 0.6), rgba(34, 89, 122, 0.6)), url("white.webp"); }
+
+}
+
 
 /* Responsive Design */
 
